# cpystal

./: LICENSE.txt  README.md  cpystal.py  pmg.py  pyproject.toml  requirements.txt  setup.py
cpystal/: __init__.py
cpystal/analysis/: __init__.py  analysis.py  pmg.py  space_group_name.txt  spacegroup.py  spin_model.py  thermal_conduction.py  xrd.py
cpystal/color/: __init__.py  color.py
cpystal/core/: __init__.py  core.py  data_structure.py
cpystal/figure/: __init__.py  figure.py
cpystal/graph/: __init__.py  graph.py
cpystal/math/algebra/: core.py  linalg.py  operator.py
cpystal/mathematics/algebra/: __init__.py  core.py  operator.py
cpystal/mathematics/linalg/: linalg.py
cpystal/measurement/: __init__.py  sequence.py
cpystal/tex/: __init__.py  tex.py
docs/: conf.py  cpystal.core.rst  cpystal.figure.rst  cpystal.mathematics.algebra.rst  cpystal.mathematics.linalg.rst  cpystal.mathematics.optimize.rst  cpystal.mathematics.rst  cpystal.measurement.rst  cpystal.rst  index.rst
docs/_build/: .buildinfo  cpystal.analysis.html  cpystal.color.html  cpystal.core.html  cpystal.figure.html  cpystal.graph.html  cpystal.html  cpystal.mathematics.algebra.html  cpystal.mathematics.html  cpystal.mathematics.linalg.html  cpystal.mathematics.optimize.html  cpystal.measurement.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: cpystal.doctree  (+12 more)
tests/analysis/: test_spacegroup.py
tests/color/: test_color.py
tests/core/: test_core.py
tests/tex/: main.tex  supplementary.tex  test_tex.py  thesis.bib
(+21 files in other folders)
