[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "cpystal"
version = "0.3.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "AP2020MU"}]
urls = {repository = "https://github.com/AP2020MU/cpystal"}

dynamic = ["version"]
requires-python = ">=3.9"

dependencies =  [
    "matplotlib >= 3.3.2",
    "more-itertools >= 8.12.0",
    "numpy >= 1.21.5",
    "pymatgen >= 2020.7.18",
    "scipy >= 1.7.3",
    "sympy >= 1.12",
    "tk >= 8.6.12",
    "tqdm >= 4.65.0",
    "texsoup >= 0.3.1",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "flake8", "mypy"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
ignore_missing_imports = true